--- a/templates/Update.html
+++ b/templates/Update.html
@@ -8,7 +8,7 @@
     
     <div class="form">
        <form method="POST" action="/update/{{task.id}}">
-            <input type ="text" name ="content" id = "content" value="{task.content}">
+            <input type ="text" name ="content" id = "content" value="{{ task.content }}">
             <input type = "submit" value = "Update Task">   
         </form>
     </div>
